--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ node_modules/
 creds.js
 
 # Private Files
-*.json
+
 *.csv
 *.csv.gz
 *.tsv
@@ -45,6 +45,8 @@ __pycache__/
 # C extensions
 *.so
 
+package-lock.json
+webPack.txt
 # Distribution / packaging
 .Python
 build/
